AutoRecompile:
Now, the engine can locate the sources directory and the output directory, which improves the dinamic of the integrated compiler, 'InlineCompiler' class.

'AssetPool' class and 'ScriptsPool' class merged into 'Pool' class.

Migrated some method in 'Encode' class to a new class, 'Scanner'.